--- a/codes/options/test/my_test_IRN+_x4.yml
+++ b/codes/options/test/my_test_IRN+_x4.yml
@@ -3,6 +3,7 @@ suffix: .vti  # add suffix to saved images
 model: IRN
 distortion: sr
 scale: 2
+attr_id: 0
 crop_border: ~  # crop border when evaluation. If None(~), crop the scale pixels
 gpu_ids: [1]
 
