--- a/codes/options/train/train_IDN_x2_3d.yml
+++ b/codes/options/train/train_IDN_x2_3d.yml
@@ -15,14 +15,15 @@ datasets:
   train:
     name: JHTDB_VTK
     mode: GT3D
-    type: vtk
-    dataroot_GT: 'E:/JHTDB/isotropic1024coarse/p' #'H:/CVcodes/3d-SR/data' # path to training HR images
+    set_type: vtk
+    data_type: point
+    dataroot_GT: 'E:/JHTDB/isotropic1024coarse/p' #'E:/JHTDB/isotropic1024coarse/p1' # path to training HR images
     dataroot_LQ: ~ # path to training reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
     use_shuffle: true
     n_workers: 4  # per GPU
     batch_size: 1
-    GT_size: 128
+    GT_size: 130
     use_flip: true
     use_rot: true
     color: RGB
@@ -30,9 +31,10 @@ datasets:
   val:
     name: val_VTI1
     mode: GT3D
-    type: vtk
+    set_type: vtk
+    data_type: point
     field: pressure
-    dataroot_GT: 'E:/JHTDB/isotropic1024coarse/p' # path to validation HR images
+    dataroot_GT: 'E:/JHTDB/isotropic1024coarse/p' # path to validation HR images 'E:/JHTDB/isotropic1024coarse/p1'
     dataroot_LQ: ~ # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
 
@@ -44,7 +46,7 @@ network_IDN:
   in_nc: 1
   out_nc: 1
   k_size: 3
-  block_num: 1
+  block_num: 2
   scale: 2
   res_scale: 0.1
   init: xavier
@@ -64,7 +66,7 @@ train:
   lr: !!float 2e-4
   beta1: 0.9
   beta2: 0.999
-  niter: 5 #500000
+  niter: 500 #500000
   warmup_iter: -1  # no warm up
 
   lr_scheme: ReduceLROnPlateau_Restart
@@ -81,11 +83,12 @@ train:
 
   val_freq: 1 #!!float 5e3
 
+#  lambda_border: 1
   lambda_fidelity_GTLR: 1
-  lambda_fidelity_GTHR: 1
+  lambda_fidelity_GTHR: 10
   lambda_gradient_GTLR: 1
   lambda_gradient_GTHR: 1
-  lambda_isosurface_similarity: 1
+  lambda_isosurface_similarity: 5
   weight_decay: !!float 1e-5
   gradient_clipping: 10
 
